# stm32f042-morse-example

./: .gitignore  CMakeLists.txt  README.md  notes.md  toolchain-stm32f042.cmake
crosstool/: stm32f0-defconfig
inc/: hal.h  morse.h
src/: CMakeLists.txt  morse.c
test/: CMakeLists.txt  test_led_driver.c  test_morse.c  testrunner.c
